--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.3
 dnspython==2.2.1
 email-validator==1.2.1
 grpcio==1.48.1
+grpcio-reflection==1.48.1
 grpcio-tools==1.48.1
 idna==3.3
 Mako==1.2.2
