--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+# Database
+
 DB_DIALECT="postgresql"
 DB_HOST="localhost"
 DB_PORT="5432"
@@ -5,3 +7,7 @@ DB_SCHEMA="template"
 DB_NAME="postgres"
 DB_USER="postgres"
 DB_PASSWORD="postgres"
+
+# Server
+
+MAX_WORKERS=2
